--- a/sigir-2025.html
+++ b/sigir-2025.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-    <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+    <meta name="description" content="Efficient In-Memory Inverted Indexes: Theory and Practice.">
+    <meta name="keywords" content="Inverted Indexes, Information Retrieval, Search Engines">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Efficient In-Memory Inverted Indexes: Theory and Practice</title>
 
