Adding profile images

--- a/sigir-2025.html
+++ b/sigir-2025.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link rel="stylesheet" href="./static/css/index.css">
     <link rel="icon" href="./static/images/favicon.svg">
-
+    <link rel="stylesheet" href="./static/css/profile.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./static/js/fontawesome.all.min.js"></script>
     <script src="./static/js/bulma-carousel.min.js"></script>
@@ -91,17 +91,30 @@
                             Practice</h1>
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
-                                <a href="https://jmmackenzie.io/">Joel Mackenzie</a><sup>1</sup>,</span>
-                            <span class="author-block">
-                                <a href="https://macavaney.us/">Sean MacAvaney</a><sup>2</sup>,</span>
-                            <span class="author-block">
-                                <a href="https://antoniomallia.it">Antonio Mallia</a><sup>3</sup>,
-                            </span>
-                            <span class="author-block">
-                                <a href="https://siedlaczek.me/">Michal Siedlaczek</a><sup>4</sup>,
-                            </span>
+                                <table>
+                                    <tr>
+                                        <td class="profile-cell"><img class="profile-img" src="static/images/joel.png"
+                                                alt="Profile Jel"></td>
+                                        <td class="profile-cell"><img class="profile-img" src="static/images/sean.png"
+                                                alt="Profile Sean"></td>
+                                        <td class="profile-cell"><img class="profile-img"
+                                                src="static/images/antonio.png" alt="Profile Antonio"></td>
+                                        <td class="profile-cell"><img class="profile-img" src="static/images/michal.png"
+                                                alt="Profile Michal"></td>
+                                    </tr>
+                                    <tr>
+                                        <!-- <th scope="row">TR-7</th> -->
+                                        <td width="20%" style="text-align: center"><a href="https://jmmackenzie.io"
+                                                style="border-radius: 50%">Joel Mackenzie</a><sup>1</sup></td>
+                                        <td width="20%" style="text-align: center"><a href="https://macavaney.us"
+                                                style="border-radius: 50%">Sean MacAvaney</a><sup>2</sup></td>
+                                        <td width="20%" style="text-align: center"><a href="https://antoniomallia.it"
+                                                style="border-radius: 50%">Antonio Mallia</a><sup>3</sup></td>
+                                        <td width="20%" style="text-align: center"><a href="https://siedlaczek.me/"
+                                                style="border-radius: 50%">Michal Siedlaczek</a><sup>4</sup></td>
+                                    </tr>
+                                </table>
                         </div>
-
                         <div class="is-size-5 publication-authors">
                             <span class="author-block"><sup>1</sup>The University of Queensland,</span>
                             <span class="author-block"><sup>2</sup>University of Glasgow,</span>
