--- a/sigir-2025.html
+++ b/sigir-2025.html
@@ -121,6 +121,11 @@
                             <span class="author-block"><sup>3</sup>Pinecone,</span>
                             <span class="author-block"><sup>4</sup>MongoDB, Inc.</span>
                         </div>
+                        <br />
+                        <div class="is-size-5 publication-authors">
+                            <b>Date and Location: TBD</b>
+                        </div>
+
                         <!-- 
                         <div class="column has-text-centered">
                             <div class="publication-links">
