--- a/sigir-2025.html
+++ b/sigir-2025.html
@@ -123,7 +123,7 @@
                         </div>
                         <br />
                         <div class="is-size-5 publication-authors">
-                            <b>Date and Location: Sunday July 13th, 09.00-12.30</b>
+                            <b>Date and Location: SIGIR 2025, Padua, Italy - Sunday July 13th, 09.00-12.30</b>
                         </div>
 
                         <!-- 
