--- a/sigir-2025.html
+++ b/sigir-2025.html
@@ -217,6 +217,35 @@
 
     </section>
 
+    <section class="section">
+        <div class="container is-max-desktop">
+            <div class="columns is-centered has-text-centered">
+                <div class="column is-four-fifths">
+                    <h2 class="title is-3">Practical Component</h2>
+                    <div class="content has-text-justified">
+                        <p>
+                            For the practical component, we will need to grab some data, and have some instructions ready.
+                        </p>
+                        <p>
+                            <strong>Prerequisite:</strong> You have your own machine with Docker installed.
+                            <br>
+                            I will step through on my own machine if you don’t have access.
+                        </p>
+                        <p>
+                            You can also experiment with the tutorial at any time (later).
+                        </p>
+                        <p>
+                            <strong>Tutorial:</strong> <a href="https://shorturl.at/VExpG" target="_blank">https://shorturl.at/VExpG</a>
+                            <br>
+                            <strong>AKA:</strong> <a href="https://github.com/pisa-engine/pisa/blob/main/test/docker/tutorial/instructions.md" target="_blank">
+                            https://github.com/pisa-engine/pisa/blob/main/test/docker/tutorial/instructions.md</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="content has-text-centered">
