--- a/sigir-2025.html
+++ b/sigir-2025.html
@@ -240,6 +240,9 @@
                             <strong>AKA:</strong> <a href="https://github.com/pisa-engine/pisa/blob/main/test/docker/tutorial/instructions.md" target="_blank">
                             https://github.com/pisa-engine/pisa/blob/main/test/docker/tutorial/instructions.md</a>
                         </p>
+                        <p>
+                            <strong>Slide Deck:</strong> <a href="https://pisa-engine.github.io/static/SIGIR2025-2.pdf" target="_blank">https://pisa-engine.github.io/static/SIGIR2025-2.pdf</a>
+                        </p>
                     </div>
                 </div>
             </div>
